--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,12 +6,12 @@
       </head>
       <body>
       <link href="styles.css" type="text/css" rel="stylesheet" />
+<!-- <script src="main.js" type="text/javascript"></script> -->
       <h1>Magnus Expansion Calculator</h1>
       <%= yield %>
       <p>
-	<a href="http://localhost:4567/form">form</a>
-	<a href="http://localhost:4567/FoxCalc/a/a">Foxcalc</a>
-	<a href="http://localhost:4567/Standard/a">Standard</a>
+	<a href="http://localhost:4567/FoxCalc">Foxcalc</a>
+	<a href="http://localhost:4567/Standard/">Standard</a>
       </p>
       </body>
 </html>
