--- a/app/views/standard.erb
+++ b/app/views/standard.erb
@@ -1,7 +1,7 @@
 <p>Standard Magnus expansion</p>
   Input a word:
 <form action="/Standard" method="post">
-<input type="text" name="message">
+<input type="text" name="word">
 <input type="submit">
 </form>
 <p>
