Refined views. GrouplikeExp still does not return correct values for 'b,t,y'

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,11 +19,14 @@
     <br><br><br>
     
     <div class="container">
+      <div class="links">
+	<a href="/FoxCalc" class="btn btn-info">Foxcalc</a>
+	<a href="/Standard" class="btn btn-info">Standard</a>
+	<a href="/Grouplike" class="btn btn-info">Group-like</a>
+      </div>
+      <br>
+      
       <%= yield %>
-      <p>
-	<a href="http://localhost:4567/FoxCalc">Foxcalc</a>
-	<a href="http://localhost:4567/Standard">Standard</a>
-      </p>
     </div>
     
   </body>
