Got better looking views by using Bootstrap v3.2.0

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,34 +1,44 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
+  
+<!-- HEAD --------------------------------------------------------- -->
   <head>
     <meta charset="utf-8">
     <title>Magnus Expansion Calculator</title>
-    <link href="styles.css" type="text/css" rel="stylesheet" />
+    <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" />
+    <link href="css/bs-example.css" type="text/css" rel="stylesheet" />
   </head>
+<!-- -------------------------------------------------------------- -->
   
+<!-- BODY --------------------------------------------------------- -->
   <body>
-    <!-- <script src="main.js" type="text/javascript"></script> -->
-    
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar">
+	<!-- Brand and toggle get grouped for better mobile display -->
+	<h1 style="padding-bottom: 5px">
+	  <a class="brand" href="/"> Magnus Expansion Calculator </a>
+	</h1>
+	<!-- Collection of nav links and other content for toggling -->
       <div class="navbar-inner">
-        <div class="container">
-          <a class="brand" href="/"> Magnus Expansion Calculator</a>
-        </div>
+	  <ul class="nav nav-tabs">
+            <li class=<%="active" if active_page?("FoxCalc")%> >
+	      <a href="/FoxCalc">FoxCalc</a></li>
+            <li class=<%="active" if active_page?("Standard")%> >
+	      <a href="/Standard">Standard</a></li>
+            <li class=<%="active" if active_page?("Grouplike")%> >
+	      <a href="/Grouplike">Group-like</a></li>
+	  </ul>
       </div>
     </div>
-    <br><br><br>
-    
+
+    <!-- YIELD -------------------------------------------- -->
     <div class="container">
-      <div class="links">
-	<a href="/FoxCalc" class="btn btn-info">Foxcalc</a>
-	<a href="/Standard" class="btn btn-info">Standard</a>
-	<a href="/Grouplike" class="btn btn-info">Group-like</a>
-      </div>
-      <br>
-      
       <%= yield %>
     </div>
+    <!-- -------------------------------------------------- -->
     
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src=”js/bootstrap.js”></script>
   </body>
-  
+<!-- -------------------------------------------------------------- -->
+
 </html>
