--- a/app/views/grouplike.erb
+++ b/app/views/grouplike.erb
@@ -1,17 +1,35 @@
 <blockquote>Group-like Magnus expansion</blockquote>
-Input a word:
-<form action="/Grouplike" method="post">
-<input type="text" name="word">
-<input type="submit">
-</form>
-<p>
-<%=
-    unless (params['word'].nil? || params['word'].empty?) then
-      theta = GrouplikeExp.instance
-#      w = Word.new(params['word'])
-#      "#{params['word']}  -->  #{theta.expand(w).to_s}"
-      g = Generator.new(params['word'])
-      "#{params['word'][0]}  -->  #{theta.log2(g).to_s}"
-    end
-%>
-</p>
+
+<!--  --------------------------------------------------------  -->
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Input a word:</h3>
+  </div>
+  
+  <div class="panel-body">
+    <div class="row">
+      <form action="/Grouplike" method="post">
+        <div class="col-xs-4"><div class="input-group">
+          <input type="text" name="word" class="form-control">
+        </div></div>
+	
+	<div class="input-group">
+	  <button type="submit" class="btn btn-default">Submit</button>
+	</div>
+      </form>
+    </div>
+  </div>
+</div>
+<!--  --------------------------------------------------------  -->
+
+<!--  --------------------------------------------------------  -->
+<div class="bs-docs-example" data-content="OUTPUT">
+     <%=
+         unless (params['word'].nil? || params['word'].empty?) then
+	     theta = GrouplikeExp.instance
+	     w = Word.new(params['word'])
+	     "#{params['word']}  -->  #{theta.log2(w).map{|e| e.to_s}}"
+    	 end
+     %>
+</div>
+<!--  --------------------------------------------------------  -->
