--- a/app/views/standard.erb
+++ b/app/views/standard.erb
@@ -1,10 +1,31 @@
 <blockquote>Standard Magnus expansion</blockquote>
-Input a word:
-<form action="/Standard" method="post">
-<input type="text" name="word">
-<input type="submit">
-</form>
-<p>
+
+<!--  --------------------------------------------------------  -->
+<div class="panel panel-default">
+
+  <div class="panel-heading">
+    <h3 class="panel-title">Input a word:</h3>
+  </div>
+  
+  <div class="panel-body">
+    <div class="row">
+      <form action="/Standard" method="post">
+            <div class="col-xs-4"><div class="input-group">
+            <input type="text" name="word" class="form-control">
+            </div></div>
+	    
+	    <div class="input-group">
+	    <button type="submit" class="btn btn-default">Submit</button>
+	    </div>
+      </form>
+    </div>
+  </div>
+  
+</div>
+<!--  --------------------------------------------------------  -->
+
+<!--  --------------------------------------------------------  -->
+<div class="bs-docs-example" data-content="OUTPUT">
 <%=
     unless (params['word'].nil? || params['word'].empty?) then
       theta = StdMagnusExp.instance
@@ -12,4 +33,5 @@ Input a word:
       "#{params['word']}  -->  #{theta.expand(w).to_s}"
     end
 %>
-</p>
+</div>
+<!--  --------------------------------------------------------  -->
