--- a/app/views/foxcalc.erb
+++ b/app/views/foxcalc.erb
@@ -1,5 +1,4 @@
-<blockquote>Fox Calculas</blockquote>
-
+<blockquote> Fox caluclus </blockquote>
 <!--  --------------------------------------------------------  -->
 <div class="panel panel-default">
   
@@ -8,25 +7,21 @@
   </div>
   
   <div class="panel-body">
-      <div class="row">
-      <form action="/FoxCalc" method="post">
+    <form class="form-inline" action="/FoxCalc" method="post">
+      <div class="col-xs-5"><div class="input-group">
+        <span class="input-group-addon">d</span>
+        <input type="text" name="word" class="form-control">
+      </div></div>
       
-            <div class="col-xs-4"><div class="input-group">
-            <span class="input-group-addon">d</span>
-            <input type="text" name="word" class="form-control">
-            </div></div>
-	    
-            <div class="col-xs-3" style="padding-left: 0px"><div class="input-group">
-            <span class="input-group-addon">/d</span>
-            <input type="text" name="gen" class="form-control">
-            </div></div>
-	    
-	    <div class="input-group">
-	    <button type="submit" class="btn btn-default">Submit</button>
-	    </div>
-	    
-      </form>
+      <div class="col-xs-2" style="padding-left: 0px"><div class="input-group">
+        <span class="input-group-addon">/d</span>
+        <input type="text" name="gen" class="form-control">
+      </div></div>
+      
+      <div class="input-group">
+	<button type="submit" class="btn btn-default">Submit</button>
       </div>
+    </form>
   </div>
   
 </div>
@@ -34,12 +29,5 @@
 
 <!--  <div class="well well-lg"> -->
 <div class="bs-docs-example" data-content="OUTPUT">
-     <%=
-       unless (params['word'].nil? || params['word'].empty?) then
-           g = (params['gen'].nil?) ? Generator.new('a') : Generator.new(params['gen'])
-           w = (params['word'].nil?) ? Word.new('a') : Word.new(params['word'])
-           fc = FoxCalculator[g]
-           "#{w.to_s}  --(d/d#{g.to_char})-->  #{fc.send(w).to_s}"
-       end
-     %>
+     <%= calc_fc params['word'], params['gen'] %>
 </div>
