--- a/app/views/grouplike.erb
+++ b/app/views/grouplike.erb
@@ -1,14 +1,12 @@
-<blockquote>Group-like Magnus expansion</blockquote>
-
-<!--  --------------------------------------------------------  -->
+<blockquote> Group-like Expansion </blockquote>
+<!--  INPUT FORM ---------------------------------------------  -->
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">Input a word:</h3>
   </div>
   
   <div class="panel-body">
-    <div class="row">
-      <form action="/Grouplike" method="post">
+      <form class="form-inline" action="/Grouplike" method="post">
         <div class="col-xs-4"><div class="input-group">
           <input type="text" name="word" class="form-control">
         </div></div>
@@ -17,19 +15,12 @@
 	  <button type="submit" class="btn btn-default">Submit</button>
 	</div>
       </form>
-    </div>
   </div>
 </div>
 <!--  --------------------------------------------------------  -->
 
-<!--  --------------------------------------------------------  -->
+<!--  OUTPUT -------------------------------------------------  -->
 <div class="bs-docs-example" data-content="OUTPUT">
-     <%=
-         unless (params['word'].nil? || params['word'].empty?) then
-	     theta = GrouplikeExp.instance
-	     w = Word.new(params['word'])
-	     "#{params['word']}  -->  #{theta.log2(w).map{|e| e.to_s}}"
-    	 end
-     %>
+     <%= calc_log2 params['word'] %>
 </div>
 <!--  --------------------------------------------------------  -->
