Modified app/myapp.rb to use GrouplikeExp.log2_simplify

--- a/app/views/grouplike.erb
+++ b/app/views/grouplike.erb
@@ -21,6 +21,6 @@
 
 <!--  OUTPUT -------------------------------------------------  -->
 <div class="bs-docs-example" data-content="OUTPUT">
-     <%= calc_log2 params['word'] %>
+     <%= calc_log2_simplify params['word'] %>
 </div>
 <!--  --------------------------------------------------------  -->
