--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,43 +2,54 @@
 <html lang="en">
   
 <!-- HEAD --------------------------------------------------------- -->
-  <head>
-    <meta charset="utf-8">
-    <title>Magnus Expansion Calculator</title>
-    <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" />
-    <link href="css/bs-example.css" type="text/css" rel="stylesheet" />
-    <!-- <link href="css/docs.css" type="text/css" rel="stylesheet" /> -->
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Magnus Expansion Calculator</title>
+  <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" />
+  <link href="css/sticky-footer-navbar.css" type="text/css" rel="stylesheet" />
+  <link href="css/bs-docs-example.css" type="text/css" rel="stylesheet" />
+  <!-- <link href="css/docs.css" type="text/css" rel="stylesheet" /> -->
+</head>
 <!-- -------------------------------------------------------------- -->
   
 <!-- BODY --------------------------------------------------------- -->
   <body>
-    <div class="navbar">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <h1 style="padding-bottom: 5px">
-	<a class="brand" href="/"> Magnus Expansion Calculator </a>
-      </h1>
-      <!-- Collection of nav links and other content for toggling -->
-      <div class="navbar-inner">
-	<ul class="nav nav-tabs">
-          <li class=<%="active" if active_page?("FoxCalc")%> >
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+	  <a class="navbar-brand" href="/"> Magnus Expansion Calculator </a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class=<%="active" if active_page?("FoxCalc")%> >
 	    <a href="/FoxCalc">FoxCalc</a></li>
           <li class=<%="active" if active_page?("Standard")%> >
 	    <a href="/Standard">Standard</a></li>
           <li class=<%="active" if active_page?("Grouplike")%> >
 	    <a href="/Grouplike">Grouplike</a></li>
-	</ul>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
-    </div>
-
+    </nav>
+    
     <!-- YIELD -------------------------------------------- -->
     <div class="container"> <%= yield %> </div>
     <!-- -------------------------------------------------- -->
 
-    <footer class="footer"> <p><%= Time.now %> </p></footer>
+    <footer class="footer">
+      <div class="container">
+	<p class="text-muted"><%= Time.now %></p>
+      </div>
+    </footer>
     
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src=”js/bootstrap.js”></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 <!-- -------------------------------------------------------------- -->
 
