Replaced GrouplikeExp*.rb's to SymplecticExp*.rb's

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -31,8 +31,8 @@
 	    <a href="/FoxCalc">FoxCalc</a></li>
           <li class=<%="active" if active_page?("Standard")%> >
 	    <a href="/Standard">Standard</a></li>
-          <li class=<%="active" if active_page?("Grouplike")%> >
-	    <a href="/Grouplike">Grouplike</a></li>
+          <li class=<%="active" if active_page?("Symplectic")%> >
+	    <a href="/Symplectic">Symplectic</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
