Display the history of results in the page /Symplectic.

--- a/app/views/standard.erb
+++ b/app/views/standard.erb
@@ -23,6 +23,6 @@
 
 <!--  --------------------------------------------------------  -->
 <div class="bs-docs-example" data-content="OUTPUT">
-  <%= calc_std params['word'] %>
+  <%= calc_std @myword %>
 </div>
 <!--  --------------------------------------------------------  -->
