--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,9 +5,9 @@
 <head>
   <meta charset="utf-8">
   <title>Magnus Expansion Calculator</title>
-  <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" />
-  <link href="css/sticky-footer-navbar.css" type="text/css" rel="stylesheet" />
-  <link href="css/bs-docs-example.css" type="text/css" rel="stylesheet" />
+  <link href="/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
+  <link href="/css/sticky-footer-navbar.css" type="text/css" rel="stylesheet" />
+  <link href="/css/bs-docs-example.css" type="text/css" rel="stylesheet" />
   <!-- <link href="css/docs.css" type="text/css" rel="stylesheet" /> -->
 </head>
 <!-- -------------------------------------------------------------- -->
@@ -17,22 +17,14 @@
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
 	  <a class="navbar-brand" href="/"> Magnus Expansion Calculator </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class=<%="active" if active_page?("FoxCalc")%> >
-	    <a href="/FoxCalc">FoxCalc</a></li>
-          <li class=<%="active" if active_page?("Standard")%> >
-	    <a href="/Standard">Standard</a></li>
-          <li class=<%="active" if active_page?("Symplectic")%> >
-	    <a href="/Symplectic">Symplectic</a></li>
+	    <% ["FoxCalc", "Standard", "Symplectic"].each do |name| %>
+            <li class= <%= active_page?(name) ? "active" : "others" %> >
+	      <a href= <%= "/"+name %> > <%= name %> </a></li>
+	    <% end %>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -49,7 +41,7 @@
     </footer>
     
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="/js/bootstrap.js"></script>
   </body>
 <!-- -------------------------------------------------------------- -->
 
