Use Haml instead of ERb

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,7 +8,7 @@
   <link href="/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
   <link href="/css/sticky-footer-navbar.css" type="text/css" rel="stylesheet" />
   <link href="/css/bs-docs-example.css" type="text/css" rel="stylesheet" />
-  <!-- <link href="css/docs.css" type="text/css" rel="stylesheet" /> -->
+m  <!-- <link href="css/docs.css" type="text/css" rel="stylesheet" /> -->
 </head>
 <!-- -------------------------------------------------------------- -->
   
