--- a/app/views/standard.haml
+++ b/app/views/standard.haml
@@ -1,17 +1,42 @@
 -# title -------------------------------
-%blockquote Standard Magnus Expansion
+%blockquote Standard Magnus Expansion and Fox Caluclus
 
 -# Input form --------------------------
 .panel.panel-default
   .panel-heading
-    %h3{ :class => "panel-title" } Input a word:  
+    %h3{ :class => "panel-title" } Input a word:
   .panel-body
     %form{ :class => "form-inline", :action => "/Standard", :method => "post" }
       .form-group
         %input{ :type => "text", :name => "word", :class => "form-control" }
       %button{ :type => "submit", :class => "btn btn-default" } Submit
-  
+
 -# Output ------------------------------
 .bs-docs-example{ :data => {:content => "OUTPUT"} }= calc_std @myword
-             
+
+%p .
+%p .
+%p .
+
+-# title ------------------------------
+%blockquote Fox caluclus
+
+-# Input form -------------------------
+.panel.panel-default
+  .panel-heading
+    %h3{ :class => "panel-title" } Input a word and a generator:
+  .panel-body
+    %form{ :class => "form-inline", :action => "/Standard", :method => "post" }
+      .form-group
+        %label{ :for => "word" } word
+        %input{ :type => "text", :name => "word", :class => "form-control" }
+      .form-group
+        %label{ :for => "generator" } /generator
+        %input{ :type => "text", :name => "gen", :class => "form-control" }
+      %button{ :type => "submit", :class => "btn btn-default" } Submit
+
+-# Output ------------------------------
+.bs-docs-example{ :data => {:content => "OUTPUT" } }
+  = calc_fc @myword, @mygen
+
 -# End of file -------------------------
