Start writing code for calculation of l(a)|b|

--- a/app/views/foxcalc.haml
+++ b/app/views/foxcalc.haml
@@ -1,3 +1,7 @@
+-# ----------------------------------------------
+-#        app/view/foxcalc.haml
+-# Time-stamp: <2016-02-27 08:45:57 (ryosuke)>
+-# ----------------------------------------------
 -# title ------------------------------
 %blockquote Fox caluclus
 
@@ -14,9 +18,9 @@
         %label{ :for => "generator" } /generator
         %input{ :type => "text", :name => "gen", :class => "form-control" }
       %button{ :type => "submit", :class => "btn btn-default" } Submit
-        
+
 -# Output ------------------------------
 .bs-docs-example{ :data => {:content => "OUTPUT" } }
   = calc_fc params[:word], params[:gen]
-  
+
 -# End of file -------------------------
