--- a/app/views/standard.haml
+++ b/app/views/standard.haml
@@ -1,3 +1,7 @@
+-# ----------------------------------------------
+-#        app/view/standard.haml
+-# Time-stamp: <2016-02-27 08:46:34 (ryosuke)>
+-# ----------------------------------------------
 -# title -------------------------------
 %blockquote Standard Magnus Expansion and Fox Caluclus
 
