--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -1,3 +1,7 @@
+-# ----------------------------------------------
+-#        app/view/index.haml
+-# Time-stamp: <2016-02-27 08:46:10 (ryosuke)>
+-# ----------------------------------------------
 -# variables --------------------
 :ruby
 
