--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -1,3 +1,7 @@
+-# ----------------------------------------------
+-#        app/view/layout.haml
+-# Time-stamp: <2016-02-27 08:46:22 (ryosuke)>
+-# ----------------------------------------------
 !!! 5
 %html{ :lang => "en" }
   -# variables -------------------------
