--- a/app/views/symplectic.haml
+++ b/app/views/symplectic.haml
@@ -1,51 +1,19 @@
--# variables --------------------------
+-# ----------------------------------------------
+-#        app/view/symplectic.haml
+-# Time-stamp: <2016-02-27 08:47:07 (ryosuke)>
+-# ----------------------------------------------
+-# variables --------------------
 :ruby
-  input_form_option = { :type => "text",
-                        :name => "word",
-                        :class => "form-control",
-                        :autocomplete => "off" }
-  glyph_option = { :class => "glyphicon glyphicon-exclamation-sign",
-                   :aria => { :hidden => "true" } }
-  headings = ["id", "word", "result", "created"]
+  @clist = %w[log2 ellab]
+-# title ------------------------
+%blockquote Symplectic Expansion
 
--# title ------------------------------
-%blockquote The degree 2 part of log of Symplectic Expansion
+-# list -------------------------
+%h4 Choose a calculator
 
--# Input form -------------------------
-.panel.panel-default
-  .panel-heading
-    %h3{ :class => "panel-title" } Input a word:
-  .panel-body
-    %form{ :class => "form-inline", :action => "/Symplectic", :method => "post" }
-      .form-group
-        %input{ input_form_option }
-      %button{ :type => "submit", :class => "btn btn-default" } Submit
-
--# alert ------------------------------
-- if @alert
-  .alert.alert-warning{ :role => "alert" }
-    %span{ glyph_option }
-    You can input the letters 'abstxy' and their capitals only.
-
--# History ----------------------------
-.bs-docs-example{ :data => { :content => "HISTORY" } }
-  %table{ :class => "table table-striped" }
-    -# header row --
-    %tr
-      - headings.each do |heading|
-        %th= heading
-      %th
-    -# data rows --
-    - @items.each do |item|
-      %tr
-        -# data cells --
-        - headings.each do |heading|
-          %td
-            %span{ :class => heading }= item[heading]
-        -# botton --
-        %td
-          %span{ :class => "pull-right" }
-            %a{ :href => "/Symplectic/delete/#{item[:id]}", :class => "btn btn-warning" }
-              Delete
+%ul{ :class => "list-group" }
+  - @clist.each do |name|
+    %li{ :class => "list-group-item" }
+      %a{ :href => "/Symplectic/#{name}" }= name
 
 -# End of file -------------------------
