Continue coding for ellab page

--- a/app/views/foxcalc.haml
+++ b/app/views/foxcalc.haml
@@ -1,6 +1,6 @@
 -# ----------------------------------------------
 -#        app/view/foxcalc.haml
--# Time-stamp: <2016-02-27 08:45:57 (ryosuke)>
+-# Time-stamp: <2016-02-28 13:11:14 (ryosuke)>
 -# ----------------------------------------------
 -# title ------------------------------
 %blockquote Fox caluclus
@@ -21,6 +21,6 @@
 
 -# Output ------------------------------
 .bs-docs-example{ :data => {:content => "OUTPUT" } }
-  = calc_fc params[:word], params[:gen]
+  = @output
 
 -# End of file -------------------------
