--- a/app/views/standard.haml
+++ b/app/views/standard.haml
@@ -1,6 +1,6 @@
 -# ----------------------------------------------
 -#        app/view/standard.haml
--# Time-stamp: <2016-02-27 08:46:34 (ryosuke)>
+-# Time-stamp: <2016-02-28 13:14:13 (ryosuke)>
 -# ----------------------------------------------
 -# title -------------------------------
 %blockquote Standard Magnus Expansion and Fox Caluclus
@@ -13,10 +13,10 @@
     %form{ :class => "form-inline", :action => "/Standard", :method => "post" }
       .form-group
         %input{ :type => "text", :name => "word", :class => "form-control" }
-      %button{ :type => "submit", :class => "btn btn-default" } Submit
+        %button{ :type => "submit", :class => "btn btn-default" } Submit
 
 -# Output ------------------------------
-.bs-docs-example{ :data => {:content => "OUTPUT"} }= calc_std @myword
+.bs-docs-example{ :data => {:content => "OUTPUT"} }= @output_st
 
 %p .
 %p .
@@ -37,10 +37,9 @@
       .form-group
         %label{ :for => "generator" } /generator
         %input{ :type => "text", :name => "gen", :class => "form-control" }
-      %button{ :type => "submit", :class => "btn btn-default" } Submit
+        %button{ :type => "submit", :class => "btn btn-default" } Submit
 
 -# Output ------------------------------
-.bs-docs-example{ :data => {:content => "OUTPUT" } }
-  = calc_fc @myword, @mygen
+.bs-docs-example{ :data => {:content => "OUTPUT" } }= @output_fx
 
 -# End of file -------------------------
