--- a/app/views/symplectic_log2.slim
+++ b/app/views/symplectic_log2.slim
@@ -1,22 +1,18 @@
-/ ----------------------------------------------
+/-----------------------------------------------
 /        app/view/symplectic_log2.haml
-/ Time-stamp: <2016-03-18 18:29:01 (ryosuke)>
-/ ----------------------------------------------
-/ variables --------------------------
+/ Time-stamp: <2016-03-25 13:53:26 (ryosuke)>
+/-----------------------------------------------
+/-- variables --------------------------
 ruby:
-  input_form_option = { :type => "text",
-                        :name => "word",
-                        :class => "form-control",
-                        :autocomplete => "off" }
   glyph_option = { :class => "glyphicon glyphicon-exclamation-sign",
                    :aria => { :hidden => "true" } }
   headings = ["id", "word", "result", "created"]
 
-/ title ------------------------------
+/-- title ------------------------------
 blockquote
   | The degree 2 part of log of Symplectic Expansion
 
-/ Input form -------------------------
+/-- Input form -------------------------
 .panel.panel-default
   .panel-heading
     h3.panel-title
@@ -24,11 +20,11 @@ blockquote
   .panel-body
     form.form-inline action="/Symplectic/log2" method="post"
       .form-group
-        input>{ input_form_option }
+        input.form-control> type="text" name="word" autocomplete="off"
         button type="submit" class="btn btn-default"
           | Submit
 
-/ alert ------------------------------
+/-- alert ------------------------------
 - if @alert
   .alert.alert-warning role="alert"
     span{ glyph_option }
@@ -38,25 +34,25 @@ blockquote
     span{ glyph_option }
       | The word which you entered was equal to the empty word.
 
-/ History ----------------------------
+/-- History ----------------------------
 .bs-docs-example data={ content: "HISTORY" }
   table.table.table-striped
-    / header row --
+    /-- header row --
     tr
       - headings.each do |heading|
         th= heading
       th
-    / data rows --
+    /-- data rows --
     - @items.each do |item|
       tr
-        / data cells --
+        /-- data cells --
         - headings.each do |heading|
           td
             span.heading= item[heading]
-        / botton --
+        /-- botton --
         td
           span.pull-right
-            a.btn btn-warning href="/Symplectic/log2/delete/#{item[:id]}"
+            a.btn.btn-warning href="/Symplectic/log2/delete/#{item[:id]}"
               | Delete
 
-/ End of file -------------------------
+/-- End of file -------------------------
