Finish coding the first version of the ellab calclator

--- a/app/views/symplectic_ellab.slim
+++ b/app/views/symplectic_ellab.slim
@@ -1,6 +1,6 @@
 / ----------------------------------------------
 /        app/view/symplectic_ellab.slim
-/ Time-stamp: <2016-03-18 18:27:50 (ryosuke)>
+/ Time-stamp: <2016-03-26 04:36:51 (ryosuke)>
 / ----------------------------------------------
 / variables --------------------------
 ruby:
@@ -34,6 +34,10 @@ blockquote
       |  You can input the letters 'abstxy' and their capitals only.
 
 / Output ------------------------------
-.bs-docs-example data={ content: "OUTPUT" } = @output
+.bs-docs-example data={ content: "OUTPUT" } = @output11
+
+.bs-docs-example data={ content: "OUTPUT" } = @output12
+
+.bs-docs-example data={ content: "OUTPUT" } = @output2
 
 / End of file -------------------------
