--- a/app/views/index.slim
+++ b/app/views/index.slim
@@ -1,19 +1,27 @@
 /----------------------------------------------
 /        app/view/index.slim
-/ Time-stamp: <2016-03-18 16:55:57 (ryosuke)>
+/ Time-stamp: <2016-04-02 03:12:34 (ryosuke)>
 /----------------------------------------------
 / variables --------------------
 ruby:
 
 / title ------------------------
-blockquote Top page
+blockquote
+  | Top page
 
 / list -------------------------
-h4 Choose a calculator
+h4
+  | Choose a calculator
 
 ul.list-group
-  - @calc_list.each do |name|
-    li.list-group-item
-      a href="/#{name}" = name
+  - Calculators.each_value do |v|
+    - if v[:level] == 1
+      li.list-group-item
+        a href=v[:path] = v[:title]
+        / ul
+        /   li
+        /     | aaa
+        /   li
+        /     | bbb
 
 / End of file --------------------------------
