--- a/app/views/layout.slim
+++ b/app/views/layout.slim
@@ -1,6 +1,6 @@
 / ----------------------------------------------
 /        app/view/layout.slim
-/ Time-stamp: <2016-03-18 16:54:49 (ryosuke)>
+/ Time-stamp: <2016-04-02 03:05:54 (ryosuke)>
 / ----------------------------------------------
 doctype html
 html lang="en"
@@ -9,11 +9,12 @@ html lang="en"
     cssList = ["bootstrap.min.css",
                "sticky-footer-navbar.css",
                "bs-docs-example.css"]
+    mytitle = Calculators.dig(:magnus, :title)
 
   / header ----------------------------
   head
     meta charset="utf-8"
-      title Magnus Expansion Calculator
+      title = mytitle
       - cssList.each do |css_file|
         link href="/css/#{css_file}" type="text/css" rel="stylesheet"
 
@@ -23,12 +24,13 @@ html lang="en"
       .container
         .navbar-header
           a.navbar-brand href="/"
-            strong Magnus Expansion Calculator
+            strong = mytitle
         #navbar.collapse.navbar-collapse
           ul.nav.navbar-nav
-            - @calc_list.each do |name|
-              li
-                a href="/#{name}" = name
+            - Calculators.each_value do |v|
+              - if v[:level] == 1
+                li
+                  a href=v[:path] = v[:name]
 
     / yield ----------------------------
     .container == yield
